# miniprojects2025

./: .gitignore  alarmC
2DPhysicsLua/: conf.lua  imgui.lua  main.lua
algoritmos/: insertion_sort.py  prim.py  sortingarray.cpp
bash/: didntfindit_wanttoinstallit.sh
blueman-rust/: Cargo.toml  README.md
blueman-rust/src/: app.rs  main.rs  ui.rs
c-memory/: memory_demo  memory_demo.c  memory_visual  memory_visual.c
computadoresexam/: ALU  ALU1bit.c  acarreo.c  alu_textos.h  binario.c  bitconvert  bitconvert.c  hola  turing.c  vn  vonneumann.c
horariosC/: ReadMe.md  main.c
macroview/: package-lock.json  package.json
makerepoC/: main.c
musicvisualizer/: README.md  bun.lockb  index.html  package.json  requirements.txt  tsconfig.json  visualizer.py  vite.config.ts
musicvisualizer/src/: App.svelte  main.ts
musicvisualizer/src/components/: AudioInput.ts  Visualizer2D.svelte  Visualizer3D.svelte  VisualizerSwitcher.svelte
obsidian-pdfjs/: README.md  bun.lockb  esbuild.config.mjs  main.js  manifest.json  package.json  tsconfig.json
obsidian-pdfjs/src/: PDFViewer.ts
pythonbot/: main.py
syncgit-rustcli/: Cargo.toml  README.md
syncgit-rustcli/src/: cli.rs  git_sync.rs  main.rs  ui.rs  utils.rs
sysinfowidget/: Makefile
sysinfowidget/src/: main.c
wifimanager-rust/: Cargo.toml
wifimanager-rust/src/: main.rs
wifimanager-rust/src/modules/: mod.rs  network_manager.rs  ui.rs  wifi_connection.rs  wifi_scanner.rs
