[package]
name = "syncgit_cli"
version = "0.2.0"
edition = "2021"
authors = ["Rickypcyt <rickypcyt@gmail.com>"]
description = "Una herramienta CLI para sincronizar repositorios Git"
readme = "README.md"
license = "MIT"

[dependencies]
clap = { version = "4.5.4", features = ["derive"] }
colored = "2.1.0"
dialoguer = "0.11.0"
git2 = "0.18"
indicatif = "0.17.11"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls"] }
walkdir = "2.4.0"
dotenvy = "0.15"
ratatui = { version = "0.23.0", features = ["crossterm"] }
crossterm = "0.27.0"
chrono = "0.4"
dirs = "5.0"


[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

