[package]
name = "syncgit"
version = "0.1.1"
edition = "2021"
authors = ["Rickypcyt <rickypcyt@gmail.com>"]
description = "Una herramienta CLI para sincronizar repositorios Git"
readme = "README.md"
license = "MIT"

[dependencies]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

