[package]
name = "wifimanager-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.26"
tui-popup = "0.6"
crossterm = "0.27"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
zbus = "4.0"
async-trait = "0.1"
